complete board icons

--- a/index.html
+++ b/index.html
@@ -36,32 +36,59 @@
     <main class="row row-cols-3 board">
 
       <div class="col  g-3">
-        <div class="p-2  ratio ratio-1x1 rounded-4 board_item"></div>
+        <div class="p-2  rounded-4 d-flex align-items-center justify-content-center board_item"></div>
       </div>
       <div class="col g-3">
-        <div class="ratio ratio-1x1 rounded-4 board_item d-flex align-items-center justify-content-center">
+        <div class="rounded-4 d-flex align-items-center justify-content-center board_item">
+          <svg class="icon cross">
+            <use xlink:href="./icons/icon-x.svg#icon-x"></use>
+          </svg>
         </div>
       </div>
       <div class="col g-3">
-        <div class="p-2 ratio ratio-1x1 rounded-4 board_item"></div>
+        <div class="p-2 rounded-4 d-flex align-items-center justify-content-center board_item">
+          <svg class="icon circle">
+            <use xlink:href="./icons/icon-o.svg#icon-o"></use>
+          </svg>
+        </div>
       </div>
       <div class="col  g-3">
-        <div class="p-2 ratio ratio-1x1 rounded-4 board_item"></div>
+        <div class="p-2 rounded-4 d-flex align-items-center justify-content-center board_item">
+          <svg class="icon cross">
+            <use xlink:href="./icons/icon-x.svg#icon-x"></use>
+          </svg>
+        </div>
       </div>
       <div class="col g-3">
-        <div class="p-2 ratio ratio-1x1 rounded-4 board_item"></div>
+        <div class="p-2 rounded-4 d-flex align-items-center justify-content-center board_item">
+          <svg class="icon circle">
+            <use xlink:href="./icons/icon-o.svg#icon-o"></use>
+          </svg>
+        </div>
       </div>
       <div class="col g-3">
-        <div class="p-2 ratio ratio-1x1 rounded-4 board_item"></div>
+        <div class="p-2 rounded-4 d-flex align-items-center justify-content-center board_item">
+          <svg class="icon cross">
+            <use xlink:href="./icons/icon-x.svg#icon-x"></use>
+          </svg>
+        </div>
       </div>
       <div class="col  g-3">
-        <div class="p-2 ratio ratio-1x1 rounded-4 board_item"></div>
+        <div class="p-2 rounded-4 d-flex align-items-center justify-content-center board_item"></div>
       </div>
       <div class="col g-3">
-        <div class="p-2 ratio ratio-1x1 rounded-4 board_item"></div>
+        <div class="p-2 rounded-4 d-flex align-items-center justify-content-center board_item">
+          <svg class="icon circle">
+            <use xlink:href="./icons/icon-o.svg#icon-o"></use>
+          </svg>
+        </div>
       </div>
       <div class="col g-3">
-        <div class="p-2 ratio ratio-1x1 rounded-4 board_item"></div>
+        <div class="p-2 rounded-4 d-flex align-items-center justify-content-center board_item">
+          <svg class="icon cross">
+            <use xlink:href="./icons/icon-x.svg#icon-x"></use>
+          </svg>
+        </div>
       </div>
 
     </main>
@@ -72,11 +99,11 @@
           <span class="score">14</span>
         </div>
       </div>
-      <div class="col gx-3"> 
+      <div class="col gx-3">
         <div class="d-flex flex-column align-items-center  rounded-3 py-2 score_item-ties ">
           <span>Ties</span>
           <span class="score">32</span>
-        </div>  
+        </div>
       </div>
       <div class="col gx-3">
         <div class="d-flex flex-column align-items-center  rounded-3 py-2 score_item-o ">
@@ -84,7 +111,7 @@
           <span class="score">11</span>
         </div>
       </div>
-     
+
 
     </footer>
   </div>
