--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./styles/main.css">
+  <script defer src="./scripts/main.js"></script>
+  <title>Tic Tac Toe - Template</title>
+
 </head>
 
 <body>
@@ -34,7 +36,6 @@
       </button>
     </header>
     <main class="row row-cols-3 board">
-
       <div class="col  g-3">
         <div class="p-2  rounded-4 d-flex align-items-center justify-content-center board_item"></div>
       </div>
@@ -90,7 +91,6 @@
           </svg>
         </div>
       </div>
-
     </main>
     <footer class="d-flex mt-4 justify-content-between row row-cols-3 px-1">
       <div class="col gx-3">
@@ -116,6 +116,22 @@
     </footer>
   </div>
 
+  <div class="vh-100 vw-100 position-absolute start-0 top-0 bg-black bg-opacity-50 d-flex align-items-center modal d-none">
+    <div class="py-4 w-100 modal-content">
+      <h6 class="text-center text-white">YOU WON!</h6>
+      <div class="d-flex align-items-center gap-3 justify-content-center">
+        <svg class="winner" id="winner">
+          <!-- Change the icon by replacing the href with the winner's icon -->
+          <use xlink:href="./icons/icon-x.svg#icon-x"></use>
+        </svg>
+        <h2 class="text-white h1 m-0">TAKES THE ROUND</h2>
+      </div>
+      <div class="d-flex justify-content-center gap-3 pt-3 modal-action">
+        <button class="btn fw-bold py-2">Quit</button>
+        <button class="btn fw-bold py-2">NEXT ROUND</button>
+      </div>
+    </div>
+  </div>
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
